--- a/gradle.properties
+++ b/gradle.properties
@@ -7,4 +7,5 @@ version=0.1.0-SNAPSHOT
 # gradle config
 org.gradle.caching=true
 org.gradle.parallel=true
+org.gradle.vfs.watch=true
 kotlin.stdlib.default.dependency=false
