--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ buildscript {
 
 plugins {
   id 'io.spring.dependency-management' version '1.0.10.RELEASE' apply false
-  id 'org.springframework.boot' version '2.2.10.RELEASE' apply false
+  id 'org.springframework.boot' version '2.2.10.RELEASE'
 }
 
 allprojects {
@@ -46,3 +46,6 @@ dependencies {
   implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
 }
 
+bootJar {
+  archiveFileName = "app.${archiveExtension.get()}"
+}
