--- a/build.gradle
+++ b/build.gradle
@@ -1,51 +1,57 @@
 buildscript {
-  ext {
-    javaVersion = 11
-
-    springVersion = "5.2.9.RELEASE"
-    springBootVersion = "2.2.10.RELEASE"
-    springCloudVersion = "Hoxton.SR6"
-    springCloudAlibabaVersion = "2.2.1.RELEASE"
-
-    cairoVersion = "0.1.0-SNAPSHOT"
-    hutoolVersion = "5.3.10"
-    mybatisVersion = "3.4.0"
-    easyexcelVersion = "2.2.5"
-
-    // tool veriable
-    versionRelease = !version.endsWith('SNAPSHOT')
-  }
-
   apply from: "${rootDir}/gradle/repositories.gradle"
 }
 
 plugins {
   id 'io.spring.dependency-management' version '1.0.10.RELEASE' apply false
-  id 'org.springframework.boot' version '2.2.10.RELEASE'
+  id 'org.springframework.boot' version '2.4.1' apply false
 }
 
 allprojects {
   apply from: "${rootDir}/gradle/repositories.gradle"
 
-  group = 'com.hfhk.cairo.gateway'
+  group = 'com.hfhk.auth'
 
   tasks.withType(JavaCompile) {
     options.encoding = "UTF-8"
   }
 }
 
+apply from: "${rootDir}/gradle/repositories.gradle"
 apply from: "${rootDir}/gradle/java.gradle"
+
 apply from: "${rootDir}/gradle/dependency-management.gradle"
-// apply from: "${rootDir}/gradle/publish.gradle"
 apply from: "${rootDir}/gradle/lombok.gradle"
 
-dependencies {
-  implementation 'org.springframework.boot:spring-boot-starter-actuator'
-  implementation 'com.alibaba.cloud:spring-cloud-starter-alibaba-nacos-config'
-  implementation 'com.alibaba.cloud:spring-cloud-starter-alibaba-nacos-discovery'
-  implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
+group = 'com.hfhk.cairo.gateway'
+
+tasks.withType(JavaCompile) {
+  options.encoding = "UTF-8"
 }
 
-bootJar {
+dependencies {
+  implementation 'org.springframework.boot:spring-boot-starter'
+  implementation 'org.springframework.boot:spring-boot-starter-actuator'
+
+  implementation 'org.springframework.boot:spring-boot-starter-webflux'
+  implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
+
+
+  implementation 'org.springframework.cloud:spring-cloud-starter-consul-discovery'
+  implementation 'org.springframework.cloud:spring-cloud-starter-consul-config'
+
+
+  implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+  implementation 'org.springframework.cloud:spring-cloud-starter-loadbalancer'
+  implementation 'io.github.openfeign:feign-okhttp'
+
+  testImplementation 'org.springframework.boot:spring-boot-starter-test'
+}
+
+test {
+  useJUnitPlatform()
+}
+
+jar {
   archiveFileName = "app.${archiveExtension.get()}"
 }
