--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,8 @@ buildscript {
 }
 
 plugins {
-  id 'io.spring.dependency-management' version '1.0.10.RELEASE' apply false
-  id 'org.springframework.boot' version '2.4.1' apply false
+  id 'io.spring.dependency-management' version '1.0.10.RELEASE'
+  id 'org.springframework.boot' version '2.4.1'
 }
 
 allprojects {
@@ -52,6 +52,6 @@ test {
   useJUnitPlatform()
 }
 
-jar {
+bootJar {
   archiveFileName = "app.${archiveExtension.get()}"
 }
