--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -32,6 +32,7 @@ spring:
         instance-group: ${hfhk.consul.discovery.instance-group:hfhk}
         tags:
           - v1
+        ip-address:
       config:
         enabled: true
         format: yaml
