--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -5,6 +5,6 @@ hfhk:
     host: 192.168.30.22
     port: 8500
     discovery:
-      instance-zone: local
-      instance-group: local
+      instance-zone: hfhk
+      instance-group: hfhk
 
